<resources>
    <string name="app_name">Radvin todo list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_navigation_tasks">Tasks</string>
    <string name="menu_navigation_categories">Categories</string>
    <string name="menu_navigation_dons">Dons</string>

    <string name="delete_all_title">Delete entry</string>
    <string name="delete_all_mesage">Are you sure you want to delete this entry?</string>
    <string name="category_task_title">Task category</string>
    <string name="dialog_title_add_task">Add task</string>
    <string name="dialog_title_edit_task">Edit task</string>
    <string name="dialog_title_add_category">Add category</string>
    <string name="dialog_title_edit_category">Edit category</string>
    <string name="name">Name</string>
    <string name="select_category">Select category</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="filter">Filter</string>
    <string name="okay">Okay</string>
    <string name="canel">Cancel</string>
    <string name="priority_high">High</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_low">Low</string>

    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cant_be_empty">Can not be empty</string>
    <string name="save">Saved</string>
    <string name="updated">Updated</string>
    <string name="select_time">Select Time</string>

</resources>
